How to get squaer meter by using of map latlung

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,17 @@ dependencies:
   path_provider: ^2.1.1
   dynamic_image_crop: ^0.0.9
   pick_color: ^0.0.4
+  location: ^5.0.3
+  flutter_map_math: ^0.1.7
   # bitmap: ^0.1.2
+  geojson_vi: ^2.2.1
+  provider: ^6.1.1
+  google_map_polyline_new: ^0.3.0+2
+  geodesy: ^0.5.0
+  turf: 
+  dart_jts: ^0.3.0+1
+
+
 
 dev_dependencies:
   flutter_test:
